--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Duplicate element</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
     <div class="container">
         <button>click me!</button>
     </div>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
